# Team_16

./: LICENSE  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/: config.py  graph.py  main.py  test.py
src/agents/: __init__.py  pdf_creator.py  role_agent.py  search_agents.py  test.py
src/prompts/: search_agent_templates.py
src/settings/: __init__.py  agent_settings.py
temp/: 187a8cd9-05ba-431b-8ad6-e2b3ec0ea301.parquet  all_descriptions.parquet  all_descriptions_and_summary.parquet  search_results.parquet  search_results_and_aggregate_summary.parquet
