[project]
name = "team-16"
version = "0.1.0"
description = ""
authors = [
    {name = "Team_16"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "langgraph (>=0.6.1,<0.7.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "openai (>=1.97.1,<2.0.0)",
    "langchain-tavily (>=0.2.11,<0.3.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
